objects/Reisekosten__c.object
<CustomObject>
    <label>Reisekosten</label>
    <nameField>
        <label>Reisekosten Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reisekosten</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Nur zu befüllen wenn es eine Erstattung gibt</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pauschale nach den Regelungen des Reisekostenrechts</fullName>
                </value>
                <value>
                    <fullName>Einmalpauschale (steuerpflichtig)</fullName>
                </value>
                <value>
                    <fullName>laut Unterkunftsrechnung</fullName>
                </value>
                <value>
                    <fullName>km-Pauschale mit dem privaten PkW nach den Regelungen des Reisekostenrechts</fullName>
                </value>
                <value>
                    <fullName>Bahntickets</fullName>
                </value>
                <value>
                    <fullName>ÖPNV - Tickets</fullName>
                </value>
                <value>
                    <fullName>Taxifahrten</fullName>
                </value>
                <value>
                    <fullName>Flug - Tickets</fullName>
                </value>
                <value>
                    <fullName>Mietfahrzeug</fullName>
                </value>
                <value>
                    <fullName>Bahncard</fullName>
                </value>
                <value>
                    <fullName>Fahrradverleih</fullName>
                </value>
                <value>
                    <fullName>Maut</fullName>
                </value>
                <value>
                    <fullName>Sonstiges</fullName>
                </value>
                <value>
                    <fullName>Verpflegungsmehraufwendungen nach den Regelungen des Reisekostenrechts</fullName>
                </value>
                <value>
                    <fullName>Einmalpauschale  (steuerpflichtig)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Traveling Costs</relationshipLabel>
        <relationshipName>Traveling_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <label>Refund</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nein</fullName>
                </value>
                <value>
                    <fullName>Ja</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reisekosten</relationshipLabel>
        <relationshipName>Reisekosten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reisekosten</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Traveling Costs</relationshipLabel>
        <relationshipName>Traveling_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>other_type__c</fullName>
        <inlineHelpText>Auszufüllen wenn bei Art der Erstattung &quot;Sonstiges gewählt wurde</inlineHelpText>
        <label>other type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reisekosten</relationshipLabel>
        <relationshipName>Reisekosten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceUnit__c</fullName>
        <label>Reference Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>kostenfrei</fullName>
                </value>
                <value>
                    <fullName>einmalig</fullName>
                </value>
                <value>
                    <fullName>pro Tag</fullName>
                </value>
                <value>
                    <fullName>pro Woche</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accommodation_Refund__c</fullName>
        <label>Accommodation Refund</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nein</fullName>
                </value>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Buchung über Doctari</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Institution</fullName>
        <active>true</active>
        <label>Institution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Doctor_Caregiver</fullName>
        <active>true</active>
        <label>Doctor/Caregiver</label>
    </recordTypes>
    <recordTypes>
        <fullName>Accommodation_booking</fullName>
        <active>true</active>
        <label>Accommodation booking</label>
    </recordTypes>
    <validationRules>
        <fullName>othertype</fullName>
        <active>false</active>
        <errorConditionFormula>OR(AND(NOT(ISPICKVAL(Type__c , &quot;Sonstiges&quot;)), NOT(ISBLANK(other_type__c))),AND(ISPICKVAL(Type__c , &quot;Sonstiges&quot;), ISBLANK(other_type__c)))</errorConditionFormula>
        <errorMessage>Für die Art der Erstattung muss &quot;Sonstiges&quot; ausgewählt sein um das Feld &quot;Sonstiges&quot; zu befüllen.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RefundTypeRelation</fullName>
        <active>false</active>
        <errorConditionFormula>OR(AND(ISPICKVAL(Accommodation_Refund__c, &quot;Nein&quot;), NOT(ISPICKVAL(Type__c, &quot;&quot;))) ,AND(ISPICKVAL(Accommodation_Refund__c, &quot;&quot;), NOT(ISPICKVAL(Type__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Wenn es keine Erstattung gibt kann keine Art der Erstattung ausgewählt werden</errorMessage>
    </validationRules>
</CustomObject>